changed individual differences section to strucutre x location

--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -230,7 +230,7 @@ Our model-fitting results make sense given the assumptions made by each model. A
 
 \subsection{Relation Between Category Structure \& Location}
 
-Generally, our behavioral results showed that members of generated categories are dissimilar to opposite categories, and similar to members of their own category. However, we also observed a great deal of individual differences in generation style. Manually inspecting the data reveals four typical patterns (see Figure \ref{fig:beta.samples}): `corners' categories with one Beta example in each corner of the space, tight clusters, `column'-like categories, and `row'-like categories. Additionally, a manual inspection reveals that each of these category types tended to be generated into distinct regions of the domain, suggesting a link between the distributional structure of a category and its location.
+Generally, our behavioral results showed that members of generated categories are dissimilar to opposite categories, and similar to members of their own category. However, we also observed a great deal of individual differences in generation style. Manually inspecting the data reveals four typical patterns (see Figure \ref{fig:beta.samples}): `corners' categories with one Beta example in each corner of the space, tight clusters, `column'-like categories, and `row'-like categories. This informal inspection also reveals that each of these category types tended to be generated into distinct regions of the domain, suggesting a link between category location and distributional structure.
 
 \begin{table}
 \centering
@@ -256,9 +256,9 @@ Generally, our behavioral results showed that members of generated categories ar
     \end{center}
 \end{figure*}
 
-For each stimulus in the domain, we computed the difference in range between the features ($range(size) - range(color)$) across every generated category that had the stimulus as member. Taking the average of these range differences yields a gradient describing how, on average, categories were distributed for each stimulus. These data (Figure \ref{fig:range-diff-gradient}) reveal a systematic relationship between category structure and location. Whereas column-like categories more often include stimuli to the left or right of the Alpha class, row-like categories appear above and below the Alpha class.  Thus, participants modify the distributional structure of new categories to the maximize distance from the contrast category.
+To more systematically evaluate this possibility, we computed, for each stimulus in the domain, the difference in range between the features ($range(size) - range(color)$) across every generated category that had the stimulus as member. Aggregating over these range differences yields a gradient describing how categories tended to distributed for each stimulus. These data (Figure \ref{fig:range-diff-gradient}) reveal a systematic relationship between category structure and location. Whereas column-like categories more often include stimuli to the left or right of the Alpha class, row-like categories appear above and below the Alpha class.  Thus, participants modify the distributional structure of new categories to the maximize distance from the contrast category.
 
-To simulate this finding, we set the attention weight parameters in PACKER and copy-and-tweak per participant. The other free parameters were set as in Table \ref{table:model-fits}. While there exist methods to find the optimal attention weights for a given classification \citep[see][]{vanpaemel2012using}, for simplicity we approximated the weights using the inverse of each feature's range: $w_k \propto range(k)^{-1}$. Thus, the Alpha and Beta categories are assumed to be distinct along dimensions that the Betas do not vary on. To simulate the hierarchical sampling model we set the domain covariance prior, $\Sigma_0$, proportional to the range of each feature. We then simulated 50 Beta categories with each participant's weighting scheme to obtain a sense of how the relative importance of each dimension affects what types of categories are generated and where they are generated. The results of these simulations are depicted in Figure \ref{fig:range-diff-gradient}.
+To simulate this finding, we set the attention weight parameters in PACKER and copy-and-tweak per participant. The other free parameters were set as in Table \ref{table:model-fits}. While there exist methods to find the optimal attention weights for a given classification \citep[see][]{vanpaemel2012using}, for simplicity we approximated the weights using proportionally to inverse of each feature's range: Thus, the Alpha and Beta categories are assumed to be distinct along dimensions that the Betas do not vary on. To simulate the hierarchical sampling model we set the domain covariance prior, $\Sigma_0$, proportional to the range (not inverted) of each feature: Thus new categories were distributed more widely along the features that each participant used more widely. We then simulated 50 Beta categories with each participant's weighting scheme to obtain a sense of how the relative importance of each dimension affects what types of categories are generated and where they are generated. The results of these simulations are depicted in Figure \ref{fig:range-diff-gradient}.
 
 When the x-axis is weighted more, PACKER creates column categories to the sides of the Alphas. Conversely, when the y-axis is weighted more, PACKER creates row categories above and below the Alphas. This behavior falls out from the nature of selective attention: Dimensions weighted more have a sharper similarity gradient. For example, when the x-axis is weighted more, PACKER favors Beta categories with more within-class similarity (less range), and less between-class similarity along the x-axis, resulting in column-like categories that differ from the Alphas along the x-axis.
 
