retooled experiment predictions

--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -148,7 +148,7 @@ where $\theta$ is a response determinism parameter and ${\rm Normal}(y; \mu, \Si
 \end{figure}
 
 
-The copy-and-tweak and hierarchical sampling models were designed to explain effects of prior knowledge on the structure of categories, and so these models assume little about where in stimulus space categories are likely to be generated. Indeed, when there are no known examples of the target category, both models assume that generation is random. PACKER is thus unique in its prediction that contrast categories should influence both the structure and location of generated categories. The behavioral experiment described below was designed to test this key prediction. 
+The copy-and-tweak and hierarchical sampling models were designed to explain effects of prior knowledge on the structure of categories, but they do not make any assumptions about the role of between-category contrast. Indeed, when there are no known examples of the target category, both models assume that generation is random. PACKER is thus unique in its prediction that contrast categories should influence both the structure and location of generated categories. The behavioral experiment described below was designed to test this key prediction. 
 
 The experiment follows the paradigm developed by \citet{jern2013probabilistic}: first, participants learn members of a known category (`Alpha', or `A'), and are then asked to generate exemplars belonging to a new category (`Beta', or `B'). We developed two Alpha categories (see Figure \ref{fig:middle-bottom-conditions}): the `Bottom' Alpha category is a tight cluster in the bottom-center of the space, and the `Middle' Alpha category is identical except that it lies in the center of stimulus space.
 
