fixed some errors in the cogsci revision

--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -81,7 +81,7 @@ To generate a new example, the model considers both the similarity to examples f
 \
 where $f(x_j)$ is a function specifying the extent to which each exemplar contributes to the generation. A negative value for $f(x_j)$ produces a `repelling' effect (items are less likely to be generated nearby $x_j$), and a positive value produces an `attracting' effect (items are more likely to be generated nearby $x_j$). When $f(x_j)=0$, the exemplar does not contribute to generation. 
 
-PACKER sets $f(x_j)$ depending on exemplar $j$'s category membership: $f(x_j) = \gamma$ if $x_j$ is a member of the target category, and $f(x_j) = 1 - \gamma$ if $x_j$ is a member of a contrast category. $\gamma$ is thus a free parameter ($0 \leq \gamma \leq 1$) controlling the trade-off between within- and between-category similarity. PACKER's core proposal is that new categories should be different from existing categories, and same-category exemplars should be similar to one another. This is realized when $\gamma$ assumes an intermediate value: For example, when $\gamma = 0.5$, $f(x_j) = 0.5$ for members of the target category and $f(x_j) = -0.5$ for members of other categories; thus, the model is likely to generate items that are similar to members of the target category but are not similar to members of other categories. However, more extreme values can be used to produce different behavior, see Figure \ref{fig:example-prob-spaces}.
+PACKER sets $f(x_j)$ depending on exemplar $j$'s category membership: $f(x_j) = \gamma$ if $x_j$ is a member of the target category, and $f(x_j) = \gamma - 1$ if $x_j$ is a member of a contrast category. $\gamma$ is thus a free parameter ($0 \leq \gamma \leq 1$) controlling the trade-off between within- and between-category similarity. PACKER's core proposal is that new categories should be different from existing categories, and same-category exemplars should be similar to one another. This is realized when $\gamma$ assumes an intermediate value: For example, when $\gamma = 0.5$, $f(x_j) = 0.5$ for members of the target category and $f(x_j) = -0.5$ for members of other categories; thus, the model is likely to generate items that are similar to members of the target category but are not similar to members of other categories. However, more extreme values can be used to produce different behavior, see Figure \ref{fig:example-prob-spaces}.
 
 The probability that a given candidate $y$ will be generated is evaluated using an Exponentiated \citet{luce1977choice} choice rule. Candidates with greater values of $a$ are more likely to be generated than candidates with smaller values:
 \begin{equation}
@@ -97,13 +97,13 @@ The proposed PACKER model suggests people generate categories by minimizing betw
 
 \section{Previous Accounts of Category Generation}
 
-Previous models of category generation focus on capturing the tendency for people to produce new categories that have similar distributional properties to existing categories. To the best of our knowledge, \citet{jern2013probabilistic} were the first to evaluate computational models of generation. Based on their work, we describe two alternative models: a formalization of the \textit{copy-and-tweak} hypothesis \citep{ward1995s}, and the \textit{hierarchical sampling} hypothesis \citep{jern2013probabilistic}.
+Previous models of category generation focus on capturing the tendency for people to produce new categories that have similar distributional properties to existing categories. To the best of our knowledge, \citet{jern2013probabilistic} were the first to evaluate computational models of generation. Based on their work, we describe two alternative models: a formalization of the \textit{Path of Least Resistance} hypothesis (later termed {\em copy-and-tweak}, see \citealp{jern2013probabilistic}), and the \textit{hierarchical sampling} hypothesis \citep{jern2013probabilistic}.
 
 
 \subsection{Copy-and-Tweak}
-The \textit{copy-and-tweak} model proposes that generation is a two-part process: First, learners retrieve an observation of the target class from memory, and then they tweak it to make something new. \citet{jern2013probabilistic} interpreted this proposal in terms of an exemplar model using the GCM \citep{nosofsky1984choice}. Formally, their model is equivalent to PACKER with $\gamma = 1$ (see Figure \ref{fig:example-prob-spaces}). In this case,  $f(x_j) = 1$ for members of the target category and $f(x_j) = 0$ for members of other categories; thus, the model considers only target-class similarity, and when no members of the target class are known, the model generates items at random. Thus, in our work we provide simulations from the copy-and-tweak account as a variant of PACKER with a fixed $\gamma$ parameter.
+The \textit{copy-and-tweak} model, based broadly on the earlier Path of Least Resistance view \citep{ward1994structured,ward1995s}, proposes that participants generate categories by retrieving an observation of the target class from memory, and then tweaking it to make something new. \citet{jern2013probabilistic} interpreted this proposal in terms of an exemplar model using the GCM \citep{nosofsky1984choice}. Formally, their model is equivalent to PACKER with $\gamma = 1$ (see Figure \ref{fig:example-prob-spaces}). In this case,  $f(x_j) = 1$ for members of the target category and $f(x_j) = 0$ for members of other categories; thus, the model considers only target-class similarity, and when no members of the target class are known, the model generates items at random. 
 
-Formalizing a model family where PACKER and copy-and-tweak are different parameterizations within the same framework is useful because comparison between the models thus provides a test of the explanatory value of the contrast mechanism: The account provided by copy-and-tweak will only equal that of PACKER if the contrast mechanism does not offer an advantage (i.e., if $\gamma < 1$ significantly improves model fits).
+In our work we provide simulations from the copy-and-tweak account, realized as a variant of PACKER with a fixed $\gamma$ parameter. Formalizing a model family where PACKER and copy-and-tweak are different parameterizations within the same framework is useful because comparison between the models provides a test of the explanatory value of the contrast mechanism: The account provided by copy-and-tweak will only equal that of PACKER if the contrast mechanism does not offer an advantage (i.e., if $\gamma < 1$ significantly improves model fits).
 
 
 
@@ -223,7 +223,7 @@ Some aspects of the results described above are somewhat commonsense: They demon
 \section{Model Evaluation}
 To obtain an overall sense of each model's ability to explain our results, we fit each model by maximizing the log-likelihood of the model's predictions of the human results. The $c$, $\gamma$, and $\theta$ parameters were fitted for PACKER; $c$, and $\theta$ were fitted for the copy-and-tweak model ($\gamma$ was fixed at 1), and $\kappa$, $\lambda$, $\nu$, and $\theta$ were fitted for the hierarchical sampling model. Note that each model possess a $\theta$ parameter fulfilling the same role (response determinism). Attention in PACKER and copy-and-tweak was set uniformly. Parameters were not allowed to vary between participants or conditions -- the goal was to obtain the best-fitting values to our entire dataset.
 
-Each model's best-fitting parameterization is shown in Table \ref{table:model-fits}. Overall, PACKER outperformed copy-and-tweak and the hierarchical sampling model by a considerable margin ($\sim11\%$ improvement in log-likelihood). The parameter settings associated with PACKER's best fit are exactly as expected: a strong preference for items that are similar to members of the target category but are dissimilar to members of the contrast category. A similar pattern of results was obtained when we only considered the second to fourth exemplars generated by each participant.
+Each model's best-fitting parameterization is shown in Table \ref{table:model-fits}. Overall, PACKER outperformed copy-and-tweak and the hierarchical sampling model by a considerable margin ($\sim13\%$ improvement in log-likelihood). The parameter settings associated with PACKER's best fit are exactly as expected: a strong preference for items that are similar to members of the target category but are dissimilar to members of the contrast category. A similar pattern of results was obtained when we only considered the second to fourth exemplars generated by each participant.
 
 Our model-fitting results make sense given the assumptions made by each model. As the copy-and-tweak and hierarchical sampling models are not influenced by the location of contrast categories within the space, they do not capture the broad tendency for generated items to be dissimilar to existing classes. 
 
