Last pass for JLA before submitting it to Dr. Kurtz... There are a few minor things for you to look over in the doc before sending it, but not too much

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -19,6 +19,24 @@
   year = {1950}
 }
 
+@article{hillenbrand1995,
+  author = {J. M. Hillenbrand and L. A. Getty and M. J. Clark and K. Wheeler},
+  title = {Acoustic characteristics of {A}merican {E}nglish vowels},
+  journal = {Journal of the Acoustical Society of America},
+  volume = {97},
+  pages = {3099--3111},
+  year = {1995}
+}
+@article{feldman2013,
+  author = {N. H. Feldman and T. L. Griffiths and S. Goldwater and J. L. Morgan},
+  title = {A Role for the Developing Lexicon in Phonetic Category Acquisition},
+  journal = {Psychological Review},
+  volume = {120},
+  number = {4},
+  pages = {751--778},
+  year={2013}
+}
+
 @incollection{brooks1978nonanalytic,
   author      = {Brooks, Lee R},
   title       = {Nonanalytic concept formation and memory for instances},
